# nf_wgobfs

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Cross.toml  LICENSE  README.md  RELEASE.md  SECURITY.md  config.example  rustfmt.toml
.cargo/: config.mipsel.toml
.devcontainer/: devcontainer.json
.github/workflows/: mips-cargo.yml  musl.yml  release.yml  releases.yml  rust-clippy.yml  tests.yml
packaging/: Dockerfile.mipsel
packaging/deb/: postinst
packaging/openwrt/: Makefile
packaging/openwrt/files/: config
src/: cli.rs  config.rs  main.rs  nfqueue.rs  randomiser.rs  udp_echo.rs
src/cipher/: chacha6.rs  mod.rs  randomiser.rs
src/filter/: keepalive.rs  mod.rs  obfuscator.rs  queue.rs
src/netutils/: common.rs  ipv4.rs  ipv6.rs  mod.rs
tests/: docker-compose.yml
tests/client1/: Dokerfile
tests/client2/: Dockerfile  Dokerfile  entrypoint.sh
tests/wg_server1/: Dockerfile  entrypoint.sh
tests/wg_server2/: Dockerfile  Dokerfile  entrypoint.sh
