[package]
name = "nf_wgobfs"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["sh0rch <sh0rch@iwl.dev>"]
description = "User-space WireGuard traffic obfuscator (NFQUEUE)"

[package.metadata.deb]
maintainer = "sh0rch <sh0rch@iwl.dev>"
assets = [
    { source = "config.example", dest = "/etc/nf_wgobfs/config", mode = "0600", conf_file = true },
]
depends = "libnetfilter-queue1, iptables | nftables"
maintainer-scripts = "packaging/deb"

[target.aarch64-unknown-linux-musl]
linker = "aarch64-linux-musl-gcc"

[[bin]]
name = "udp_echo"
path = "src/udp_echo.rs"

[dependencies]
# ───── core libs ─────
rand = "0.9.1"
hex = "0.4"
nfq = "0.2.5"
sha2 = "0.10.9"
fastrand = "2.3.0"

# ───── ciphers ─────
chacha20 = "0.9.1"
cpufeatures = "0.2.17"
